samples/_failures_safe/1761394139_019b2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9debb42f.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_9debb42f.c:178:5: error: expected expression at end of input
  178 |     (*
      |     ^
./samples/SAFE/__tmp_9debb42f.c:178:5: error: expected declaration or statement at end of input
